[package]
name = "dakoku"
version = "0.1.0"
edition = "2021"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
description = "Money Forward attendance CLI"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9"
failure = "0.1.8"
spinners = "2.0.0"
seahorse = "1.2"
dotenv = "0.15"
