[package]
name = "dakoku"
version = "0.2.4"
edition = "2021"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
description = "Money Forward attendance CLI"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0"
spinners = "2.0.0"
seahorse = "2.0"
dotenv = "0.15"
dirs = "4"
chrono = "0.4"
anyhow = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
